--- a/book.bib
+++ b/book.bib
@@ -421,7 +421,7 @@ mendeley-groups = {Methodology/Psychometrics},
   pages = {13--20},
   pmid = {16496031},
   title = {{Ecological momentary assessment: what it is and why it is a method of the future in clinical psychopharmacology.}},
-  url = {/pmc/articles/PMC1325062/?report=abstract},
+  url = {http://jpn.ca/wp-content/uploads/2014/04/31-1-13.pdf},
   volume = {31},
   year = {2006}
 }
@@ -472,6 +472,20 @@ mendeley-groups = {Methodology/Psychometrics},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/17371121 http://doi.apa.org/getdoi.cfm?doi=10.1037/1040-3590.19.1.25},
   volume = {19},
   year = {2007}
+}
+
+@article{Posner2005,
+  author = {Posner, J and Russell, J A and Peterson, B S},
+  doi = {http://dx.doi.org/10.1017/S0954579405050340},
+  isbn = {1469-2198},
+  issn = {0954-5794 (Print) 0954-5794 (Linking)},
+  journal = {Development and Psychopathology},
+  number = {3},
+  pages = {715--734},
+  pmid = {16262989},
+  title = {{The circumplex model of affect: An integrative approach to affective neuroscience, cognitive development, and psychopathology}},
+  volume = {17},
+  year = {2005}
 }
 
 
@@ -552,12 +566,18 @@ mendeley-groups = {Methodology/Psychometrics},
 
 
 @article{Smyth2003,
-  author = {a.a. {Smyth, J.M. {\&} Stone}},
-  journal = {Journal of Happiness Studies},
-  pages = {35--52},
-  title = {{Ecological momentary assessment research in behavioral medicine.}},
-  volume = {4},
-  year = {2003}
+  author = "Smyth, Joshua M. and Stone, Arthur A.",
+  title = "Ecological Momentary Assessment Research in Behavioral medicine",
+  journal = "Journal of Happiness Studies",
+  year = "2003",
+  month = "Mar",
+  day = "01",
+  volume = "4",
+  number = "1",
+  pages = "35--52",
+  issn = "1573-7780",
+  doi = "10.1023/A:1023657221954",
+  url = "https://doi.org/10.1023/A:1023657221954"
 }
 
 
