--- a/part6/aph-catalogue.Rmd
+++ b/part6/aph-catalogue.Rmd
@@ -12,38 +12,48 @@ ut massa tempor, ac dapibus dui viverra.
 
 ## APH
 
-Table: (\#tab:APHresearch) Your table caption.
+Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 
-| Name           | Focus            | URL               | Org    | PASSIVE| Backoffice  |
-|---------------:|-----------------:|------------------:|-------:|-------:|------------:|
-| CASPAR         | Suidide          | ilumivu.com       | VU     |  YES   | YES         |
-| E-COMPARED     | Depression       | www.moodbuster.eu | EU     |  YES   | YES         |
-| Psycho-systems | Networks         | movisense.org     | UvA    |  YES   | YES         |
-| RADAR-CNS      | Depression       | www.psymate.eu    | GiG    |  YES   | YES         |
-| VU-AMS group   | Stress & emotion | www.psymate.eu    | VU     |  YES   | YES        
-|
-| NESDA          | Depression       | www.psymate.eu    | VuMC   |  YES   | YES         |
-| TEMSTEM        | Psychosis        | www.psymate.eu    | VU     |  YES   | YES         |
-| FAntasTIGUE    | Fatigue          | www.psymate.eu    | AMC    |  YES   | YES         |
-| IMPACT         | Heart failure    | www.psymate.eu    | AMC    |  YES   | YES         |
-| GROUP          | Heart failure    | www.psymate.eu    | AMC    |  YES   | YES         |
+| Name           | Focus            | URL                  | Organisation        |
+|---------------:|-----------------:|---------------------:|--------------------:|
+| CASPAR         | Suicide          | ilumivu.com          | VU                  |
+| E-COMPARED     | Depression       | ict4depression.eu    | VU                  |
+| FAntasTIGUE    | Fatigue          | tinyurl.com/ybb7up87 | AMC                 |
+| GROUP          | Heart failure    | --                   | AMC                 |
+| IMPACT         | Heart failure    | --                   | AMC                 |
+| NESDA          | Depression       | nesda.nl             | VuMC / GGz InGeest  |
+| RADAR-CNS      | Depression       | radar-cns.org        | VuMC / Ggz InGeest  |
+| Psycho-systems | Symptom Networks | psychosystems.org    | UvA                 |
+| TEMSTEM        | Psychosis        | tinyurl.com/ybac6flo | VU                  |
+| VU-AMS         | Stress & emotion | vu-ams.nl            | VU                  |
 
 
 ### The CASPAR Project (approval 16-02-2018)
 
 Project team: Wouter van Ballegooijen, PhD; Chani Nuij, MSc; Ad Kerkhof, PhD; Jan Smit, PhD; Heleen Riper, PhD 
+
 APH site: Vrije Universiteit Amsterdam, VUmc, GGZ inGeest
+
 Full title: Continuous Assessment for Suicide Prevention and Research
+
 Topic: Smartphone-enabled safety planning, self-monitoring, suicide
+
 Status: Ongoing, 2016 - 2020
-Target population: Adult suicidal patients (N=80) with major depression or dysthymia and suicide risk in mental health care
+
+Target population: Adult suicidal patients (N = 80) with major depression or dysthymia and suicide risk in mental health care
+
 Platform used: Ilumivu (https://ilumivu.com)  
+
 EMA active: Participants are prompted 3 times a day to answer 8 self-report items (e.g. 'I feel sad'). Items are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9) and are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Measured concepts include mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Results are presented to patients in separate graphs. 
 EMA passive: Location data are gathered to indicate movement patterns and daily rhythm. 
 Planned variables include accelerometer and smartphone usage patterns. These data are not visible to patients.
+
 Data management: Patients receive a unique code to log in to the app. No names, phone numbers or other contact information are stored on the Ilumivu server. Patients are encouraged to show their graphs to their clinicians during treatment sessions. 
+
 Project goals: The primary objective of the CASPAR study is to test the feasibility of smartphone-based safety planning and real-time self-monitoring for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalised in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to (a) empirically validate hypothesised psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behaviour, and (c) profile types of suicidal individuals.
+
 Results: An interactive safety plan that patients can access 24/7, increased disease awareness of patients due to self-monitoring, and input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalised interventions according to precision medicine principles, and more effective suicide prevention.
+
 Lessons learned and advice for other researchers: Constructing the right EMA items takes time. The constructs that you need to measure should be based on theory. Translate these concepts to momentary items in collaboration with EMA experts. Then test extensively among your target group.
 
 ### E-COMPARED (EU)
