add web resource in proper form (ccmo)

--- a/book.bib
+++ b/book.bib
@@ -60,6 +60,15 @@
   isbn      = {978-94-6259-832-4},
 }
 
+@misc{ccmo_meddev,
+  author = {{CCMO}},
+  year = {2018},
+  title   = {Research with a medical device},
+  url = {http://www.ccmo.nl/en/research-with-a-medical-device},
+  note = {Retrieved May 25 2018, from \url{http://www.ccmo.nl/en/research-with-a-medical-device}}
+}
+
+
 @Article{Conner2012a,
   author        = {Conner, Tamlin S. and Barrett, Lisa Feldman},
   title         = {Trends in ambulatory self-report: The role of momentary experience in psychosomatic medicine},
@@ -76,15 +85,15 @@
 }
 
 @InCollection{Conner2012b,
-  pages     = {89--107},
+  author    = {Tamlin S. Conner and Barbara J. Lehman},
   title     = {Getting started: Launching a study in daily life.},
+  booktitle = {Handbook of research methods for studying daily life.},
   publisher = {Guilford Press},
   year      = {2012},
-  author    = {Tamlin S. Conner and Barbara J. Lehman},
   editor    = {M. R. Mehl and Tamlin S. Conner},
+  pages     = {89--107},
   address   = {New York, NY, US.},
   isbn      = {978-1-60918-749-1},
-  booktitle = {Handbook of research methods for studying daily life.},
   keywords  = {*Environment,*Experiences (Events),*Experimental Design,*Experimentation,*Methodology,Behavior,Experimental Psychologists,Physiology},
 }
 
@@ -733,5 +742,7 @@
   doi       = {10.1201/9781315204963},
   url       = {http://yihui.name/knitr/},
 }
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
