apa instead of apalike (not sure this works though...)

--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ cover-image: "images/cover.png"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
-biblio-style: apalike
+biblio-style: apa
 link-citations: yes
 description: "This is an Amsterdam Public Health (APH) Research Manual, written for 
 researchers who are considering Ecological Momentary Assessment (EMA) studies."
